[gd_scene load_steps=7 format=3 uid="uid://pkx1evses6mw"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_se024"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="2_nj0ci"]
[ext_resource type="Script" path="res://scripts/Lobby.gd" id="3_h6oq7"]
[ext_resource type="Script" path="res://scripts/GameOverlay.gd" id="4_vvex0"]
[ext_resource type="Script" path="res://scripts/HostSettings.gd" id="5_qjnwn"]
[ext_resource type="Script" path="res://scripts/JoinSettings.gd" id="6_06r8d"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_se024")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_nj0ci")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 510.0
offset_top = 234.0
offset_right = 580.0
offset_bottom = 335.0

[node name="StartButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Lobby" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_h6oq7")

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
layout_mode = 0
offset_left = 510.0
offset_top = 234.0
offset_right = 580.0
offset_bottom = 335.0

[node name="SingePlayerButton" type="Button" parent="Lobby/VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="HostGameButton" type="Button" parent="Lobby/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinGameButton" type="Button" parent="Lobby/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="GameOverlay" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_vvex0")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverlay"]
layout_mode = 0
offset_left = 510.0
offset_top = 234.0
offset_right = 580.0
offset_bottom = 335.0

[node name="ResumeButton" type="Button" parent="GameOverlay/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="GameOverlay/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="GameOverlay/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="GameOverlay/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="HostSettings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 510.0
offset_top = 235.0
offset_right = 550.0
offset_bottom = 275.0
script = ExtResource("5_qjnwn")

[node name="VBoxContainer" type="VBoxContainer" parent="HostSettings"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="HostSettings/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Port" type="LineEdit" parent="HostSettings/VBoxContainer"]
layout_mode = 2
placeholder_text = "Port"

[node name="StartServerButton" type="Button" parent="HostSettings/VBoxContainer"]
layout_mode = 2
text = "Start Server"

[node name="ErrorMessage" type="Label" parent="HostSettings/VBoxContainer"]
layout_mode = 2

[node name="JoinSettings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 513.0
offset_top = 235.0
offset_right = 553.0
offset_bottom = 275.0
script = ExtResource("6_06r8d")

[node name="VBoxContainer" type="VBoxContainer" parent="JoinSettings"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ip" type="LineEdit" parent="JoinSettings/VBoxContainer"]
layout_mode = 2

[node name="Port" type="LineEdit" parent="JoinSettings/VBoxContainer"]
layout_mode = 2

[node name="JoinServerButton" type="Button" parent="JoinSettings/VBoxContainer"]
layout_mode = 2

[node name="ErrorMessage" type="Label" parent="JoinSettings/VBoxContainer"]
layout_mode = 2
